# ClipMind

./: .dockerignore  .env.example  .env.nas.example  .gitattributes  .gitignore  CLAUDE.md  README.md  compose.yml  conftest.py  docker-compose.nas.yml  pytest.ini
apps/api/: alembic.ini  pyproject.toml
apps/api/app/: __init__.py  config.py  db.py  main.py  tasks_client.py
apps/api/app/routers/: ai.py  assets.py  collections.py  dynamic_collections.py  export_center.py  exports.py  favorites.py  final_video_usages.py  final_videos.py  health.py  legacy_evidence.py  processing.py  product_attributes.py  product_catalog.py  product_governance.py  product_media.py  product_reference.py  products.py  projects.py  review.py  saved_searches.py  scripts.py  search.py  shots.py  source_directories.py  system.py  tags.py  uploads.py  usage_review.py  visual_experiments.py  visual_search.py
apps/api/app/schemas/: ai.py  asset.py  bundle.py  collection.py  common.py  dynamic_collection.py  export.py  export_center.py  favorite.py  final_video.py  identity.py  legacy_evidence.py  observability.py  processing.py  product.py  product_attributes.py  product_catalog.py  product_governance.py  product_media.py  project.py  review.py  saved_search.py  script.py  search.py  shot.py  source_directory.py  system.py  tag.py  usage_review.py  visual.py
apps/api/app/security/: __init__.py  paths.py
apps/api/app/services/: ai_dispatch.py  asset_search_service.py  asset_service.py  asset_summary.py  attribute_service.py  bundle_service.py  catalog_service.py  collection_service.py  dynamic_collection_service.py  export_center_service.py  favorite_service.py  files.py  final_video_service.py  governance_service.py  identity_service.py  image_review_service.py  images.py  legacy_evidence_service.py  migration_check.py  observability_service.py  processing_service.py  product_media_service.py  product_media_suggestions.py  product_service.py  project_service.py  query_serde.py  reference_service.py  review_service.py  revision_service.py  saved_search_service.py  scan_dispatch.py  script_export_service.py  script_match_service.py  script_providers.py  script_service.py  search_index_service.py  search_providers.py  search_service.py  shot_dispatch.py  shot_filter.py  (+11 more)
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_shot_processing.py  0003_shot_keyframes.py  0004_asset_poster.py  0005_ai_analysis.py  0006_ai_review_products.py  0007_semantic_search.py  0008_script_matching.py  0009_script_matching_selection.py  0010_projects_collections.py  0011_export_center.py  0012_library_export_features.py  0013_generic_product_catalog.py  0014_product_attributes_references.py  0015_product_onboarding_governance.py  0016_final_video_usage_lineage.py  0017_asset_stable_identity.py  0018_legacy_usage_evidence.py  0019_product_media_association.py  0020_product_media_operations.py  0021_asset_level_search.py  0022_visual_auto_candidates.py  0023_image_review_state.py
apps/api/tests/: conftest.py  test_ai_api.py  test_asset_identity_api.py  test_asset_search_api.py  test_assets.py  test_auto_pipeline.py  test_bundle_api.py  test_catalog_generalization_guard.py  test_catalog_governance.py  test_catalog_hardening.py  test_collections_api.py  test_diagnose_ai_network.py  test_editlist_formats.py  test_export_center_api.py  test_final_video_usage.py  test_health.py  test_image_review.py  test_legacy_evidence.py  test_library_api.py  test_migrations.py  test_observability.py  test_product_attributes.py  test_product_catalog.py  test_product_media.py  test_product_media_ops.py  test_product_reference.py  test_products_review.py  test_projects_api.py  test_projects_gate_a_extra.py  test_reference_promotion.py  test_review_api.py  test_script_match_api.py  test_scripts_api.py  test_search_api.py  test_search_deterministic_order.py  test_search_empty_doc_defense.py  test_search_index_hook.py  test_shots.py  test_source_directories.py  test_ui_completion.py  (+4 more)
docs/: AI_PROVIDER_PLAN.md  (+34 more)
services/embedder/: pyproject.toml
services/embedder/embedder/: __init__.py  app.py  config.py
services/embedder/tests/: conftest.py  test_app.py  test_revision_consistency.py
services/worker/: pyproject.toml
services/worker/clipmind_worker/: __init__.py  auto_chain.py  celery_app.py  config.py  db.py
services/worker/clipmind_worker/ai/: __init__.py  projection.py  runner.py  tasks.py
services/worker/clipmind_worker/exports/: factload.py  tasks.py
services/worker/tests/: conftest.py  test_ai_runner.py  test_ai_task_persistence.py  test_asset_indexer.py  test_atomic_replace_faults.py  test_auto_chain.py  test_detector.py  test_diff.py  test_fingerprint.py  test_identity_scan.py  test_legacy_import_task.py  test_media_constraints.py  test_media_ffmpeg.py  test_media_tasks.py  test_projection.py  test_review_layers.py  test_scan.py  test_search_backfill.py  test_search_indexer.py  test_video_input.py  test_visual_auto.py  test_walker.py
(+334 files in other folders)
