[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clipmind-embedder"
version = "0.1.0"
description = "ClipMind 本地 Embedding 微服务（OpenAI 兼容 /embeddings；sentence-transformers）"
requires-python = ">=3.11"
# torch 在 Dockerfile 中从 CPU 索引安装（见 infra/embedder.Dockerfile），此处不直接钉具体版本。
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.40",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "sentence-transformers>=3.0,<6",
    # PR-F 视觉嵌入：图片解码（SigLIP 经 transformers 加载，无新框架）
    "pillow>=10.4,<12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "httpx>=0.27,<0.29",
    "ruff>=0.7,<0.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["embedder*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
